HotFix:Arquitectura:UI:BD